export const COMMAND_PATH_PREF = 'src/proto/command/'
export const COMMAND_PROTO = [
  {
    type: '2',
    command: '21010',
    result: 'EnhanceAffect',
    description: 'enhance affect'
  },
  {
    type: '2',
    command: '21011',
    param: 'TraceParam',
    result: 'TraceResult',
    description: 'trace method'
  },
  {
    type: '2',
    command: '21099',
    result: 'EnhanceCommandComplete',
    description: 'enhance command complete hint'
  }
]
